--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                         <div class="slider__slide">
                             <div class="slider__user">
                                 <img
-                                    src="../img/user_6.jpg"
+                                    src="./img/user_6.jpg"
                                     alt=""
                                     class="slider__image"
                                 />
